# fantasy_books

./: .gitignore  README.md  Test3.py  ac_conversion.py  auto-py-to-exec-settings.json  books_lists.py  books_spreadsheet_out.xlsx  books_spreadsheet_out3.xlsx  fantasy_book_settings.yaml  fantasy_books.code-workspace  fantasy_books.py  fantasy_books.pyw  fantasy_books_gui.py  fantasy_books_tinker_subroutines.py  funky_rolls.py  gui_graphics.yaml  hello2.py  icons.py  logging_tools_GLS.py  master_books_settings.yaml  master_fantasy_book_list.xlsx  mercenary_recruit.css  mercenary_recruit.py  oop_roll_on_tables_GLS.py  oop_tables_GLS.py  play.py  preferences_fantasy_books.yaml  pyproject.toml  rect_tri_numbers.py  requirements.txt  rpg_tables.py  settings_GLS.py  settings_world.py  sql_wrapper_GLS.py  table_tools_GLS.py  test.xlsx  testEfficiency.py  testSQL.db3  test_addition.py  test_gui.py  (+9 more)
aa-archive/: books_spreadsheet_out copy.xlsx  fantasy_book_settings WITH FORMATTING AND COMMENTS.yaml  fantasy_books_WORKS_BACKUP-2023-06-22.py  fantasy_books_gui orig play.py  fantasy_books_tinker_subroutines 2023-06-22b.py  fantasy_books_ver_1.py  fantasy_books_works to esoteric.py  fantasy_books_works.py  oop_roll_on_tables_GLS BACKUP_WORKS_02.py  oop_roll_on_tables_GLS.py  oop_roll_on_tables_GLS_BACKUP_WORKS.py  sql_wrapper_GLS.py  table_tools_GLS.py  test_sql_wrapper_GLS.py  textual_table_mockup_RPG_table_works.py
backup/: master_fantasy_book_list-10000 book run.xlsx
blank_excel_files_templates/: books_spreadsheet_out_BLANK.xlsx  master_fantasy_book_list_BLANK.xlsx
(+67 files in other folders)
