[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "acks_fbg"
version = "1.0.4"
dynamic = ["dependencies"]
authors = [
  { name="Gregory L. Smith", email="glsmith7@gmail.com" },
]
description = "Generates random fantasy books using ACKS Axioms 14 algorithm"
readme = "README.md"
requires-python = ">=3.11.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/glsmith7/fantasy_books"
"Bug Tracker" = "https://github.com/glsmith7/fantasy_books/issues"